# pi_cpp_duration

./: Dockerfile  Readme.adoc  run_pi
src/: CMakeLists.txt  hello_world.cpp  pi_main.cpp
src/awesome_lib/: CMakeLists.txt
src/awesome_lib/include/awesome_lib/: awesome_class.h
src/awesome_lib/src/: awesome_class.cpp
src/pi_duration_lib/: CMakeLists.txt
src/pi_duration_lib/include/pi_duration_lib/: pi_duration.h
src/pi_duration_lib/src/: pi_duration.cpp
